# dtek-scraper

./: .env.example  .gitignore  README.md
src/: pyproject.toml  scrapy.cfg  settings.py
src/commands/: __init__.py  dtek_comparator.py
src/middlewares/: __init__.py  rmq_consumer_middleware.py
src/pipelines/: __init__.py  json_pipeline.py  rmq_publisher_pipeline.py
src/spiders/: __init__.py  visicom_spider.py
src/utils/: __init__.py  pika_connection_parameters.py
